--- a/index.html
+++ b/index.html
@@ -238,24 +238,51 @@
   <button class="next-btn" id="nextBtn">Next ➜</button>
 
   <script>
-    const text = `This website will help you to figure out the timing of each region in FRANCE alongside the weather and date — in case you get bored using ancient human tools like "IPHONE".`;
-    const paragraph = document.getElementById('typing');
-    let i = 0;
+  const envelopeBody = document.getElementById('envelopeBody');
+  const envelopeOverlay = document.getElementById('envelopeOverlay');
+  const openEnvelopeBtn = document.getElementById('openEnvelopeBtn');
+  const paragraph = document.getElementById('typing');
+  const nextBtn = document.getElementById('nextBtn');
 
-    function typeWriter() {
-      if (i < text.length) {
-        paragraph.textContent += text.charAt(i);
-        i++;
-        setTimeout(typeWriter, 50);
-      }
-    }
+  const text = `This website will help you to figure out the timing of each region in FRANCE alongside the weather and date — in case you get bored using ancient human tools like "IPHONE".`;
 
-    setTimeout(typeWriter, 1500);
+  // Hide the paragraph initially
+  paragraph.style.opacity = '0';
 
-    document.getElementById('nextBtn').addEventListener('click', () => {
-      window.location.href = 'connect.html'; // goes to the connection page
-    });
-  </script>
+  openEnvelopeBtn.addEventListener('click', () => {
+    envelopeBody.classList.add('open');
+
+    // Let flap animation finish before fading overlay out
+    setTimeout(() => {
+      envelopeOverlay.classList.add('fade-out');
+    }, 2200);
+
+    // After envelope fades out, show main page
+    setTimeout(() => {
+      envelopeOverlay.remove();
+      document.body.style.overflow = 'auto';
+      paragraph.style.opacity = '1';
+
+      // Wait 5 seconds before starting typing
+      setTimeout(() => {
+        let i = 0;
+        function typeWriter() {
+          if (i < text.length) {
+            paragraph.textContent += text.charAt(i);
+            i++;
+            setTimeout(typeWriter, 50);
+          }
+        }
+        typeWriter();
+      }, 2000);
+    }, 4000);
+  });
+
+  nextBtn.addEventListener('click', () => {
+    window.location.href = 'connect.html';
+  });
+</script>
+
   <script>
   const envelopeBody = document.getElementById('envelopeBody');
   const envelopeOverlay = document.getElementById('envelopeOverlay');
